# evo_neuro_bench

./: README.md  pyproject.toml
docs/: DEVELOPMENT.md  research_status.md
notebook/: 021_v3.ipynb  022_module_runner.ipynb
src/evo_neuro_bench/: __init__.py  benchmark.py
src/evo_neuro_bench/adapters/: __init__.py  model_adapter.py
src/evo_neuro_bench/models/: __init__.py  cephalopod.py  cnidarian.py  common.py  fish.py  human.py  segmented.py
src/evo_neuro_bench/tasks/: __init__.py  arc_mini.py  detour.py  grid_firststep.py  hd_jellyfish.py  local_reflex.py  peristalsis.py  reversal.py  rpm_mini.py
src/evo_neuro_bench/utils/: __init__.py
tests/: test_smoke.py
