[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evo_neuro_bench"
version = "0.1.0"
description = "Modular evolutionary neuro-benchmark package"
authors = [{name = "Unknown"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
notebook = ["jupyter"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
